# monorepo

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-tidy  .gitignore  .gitlab-ci.yml  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
.aspect/cli/: config.yaml
docs/: README.md  STYLE.md
infra/: .terraform.lock.hcl  README.md  provider.tf  servers.tf  ssh.tf  user_data.yml  variables.tf
modules/dotfiles/: install.sh
modules/dotfiles/nvim/lua/: remap.lua
modules/replication/benchmark/: BUILD  main.cc
modules/replication/model/cas-paxos/: BUILD.bazel
modules/replication/model/common/: network.p
modules/replication/model/paxos/: BUILD.bazel
modules/replication/proto/: BUILD  caspaxos.proto  foo.proto
modules/replication/src/client/: BUILD  client_main.cc  main.cc
modules/replication/src/server/: BUILD  ballot.h  change_function.h  in_memory_store.cc  in_memory_store.h  in_process_transport.cc  in_process_transport.h  main.cc  node.cc  node.h  server_main.cc  store.h  transport.h
modules/replication/test/: BUILD  hello_world_test.cc
modules/replication/test/integration/: BUILD.bazel  simple.sh
modules/rules_p/: MODULE.bazel  README.md
modules/rules_p/p/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
modules/rules_p/p/dependencies/3.0.0/paket/: paket.dependencies  update-deps.sh
modules/rules_p/p/dependencies/3.0.0/parser/: BUILD.bazel  PLexer.cs  PParser.cs  PParserBaseListener.cs  PParserBaseVisitor.cs  PParserListener.cs  PParserVisitor.cs  README
modules/rules_p/p/private/: providers.bzl
modules/rules_p/p/private/rules/: project.bzl  test.bzl
modules/santa/: main.py
modules/ziggy/: BUILD  lib.zig  main.zig
modules/ziggy/frontend/: BUILD  default_route.js  hello_route.js  index.js  loader.js  server.js
tools/etc/: do
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
tools/report/: BUILD.bazel  report.sh
(+22 files in other folders)
